Fix on docker-compose.yml to expose the port to the API

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
       MONGODB_PASSWORD: $MONGODB_PASSWORD
     image: leocavalcanti/sw-planets-service
     restart: always
+    ports:
+      - 80:80
     logging:
       options:
         max-size: "10m"
